fix word wrap

--- a/src/About/about.css
+++ b/src/About/about.css
@@ -9,12 +9,16 @@
     margin: 0 auto;
     max-width: 750px;
     background-color: rgba(255, 255, 255, 0.747);
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;  
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;    
+    word-wrap: break-word; 
 }
 
 #about-container{
     margin-top: 50px;
     font-family: "Poppins", sans-serif;
-
 }
 
 #about-header {
